Bug 154677 - Crash when clicking on Tools - Options - Language Settings - DeepL
Summary: Crash when clicking on Tools - Options - Language Settings - DeepL
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: high critical
Assignee: Julien Nabet
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: Options-Dialog-Language Crash
  Show dependency treegraph
 
Reported: 2023-04-06 12:33 UTC by Buovjaga
Modified: 2023-04-08 14:38 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
GDB trace of crash (13.23 KB, text/plain)
2023-04-06 12:33 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2023-04-06 12:33:55 UTC
Created attachment 186511 [details]
GDB trace of crash

Click on Tools - Options - Language Settings - DeepL.

Crashes with non-debug build as well.

Arch Linux 64-bit, X11
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 79e60bb93f69370f23010adb078b5a5de5a1e7b2
CPU threads: 8; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 6 April 2023

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 23bd3bd10e74b0c23c2654d02d7d830e7693adac
CPU threads: 2; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_FI); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-04-06 14:43:23 UTC
I don't see the DeepL entry in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 250b820a24640a33d73a6e690e04e36be01cda28
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 2 Buovjaga 2023-04-06 14:47:43 UTC
(In reply to Xisco Faulí from comment #1)
> I don't see the DeepL entry in

Enable experimental features (sorry, I did not notice it)
Comment 3 Xisco Faulí 2023-04-06 14:49:46 UTC
Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 250b820a24640a33d73a6e690e04e36be01cda28
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

I think we can lower the importance a bit since it's a experimental feature
Comment 4 Xisco Faulí 2023-04-06 14:56:17 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2023-03-14 16:24:09 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2023-03-15 07:30:30 +0000
commit 69b0fa8a6267a1fa77e77405000f42e8aeba5fa0 (patch)
tree 2de817fe1e13751aea9ffd55ffff28e8fa7cf9d5
parent c95bfc87ce4e229a93cb69325d815404a9883f20 (diff)
Use officecfg instead of SvxDeeplOptions

Bisected with: bibisect-linux64-7.6

Adding Cc: to Noel Grandin
Comment 5 Julien Nabet 2023-04-08 12:31:32 UTC
I gave a try with https://gerrit.libreoffice.org/c/core/+/150158
Comment 6 Commit Notification 2023-04-08 14:37:01 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/05e4b5bbe6da465ef6cf1b3a2d0da0a6ed6b825c

tdf#154677: fix crash when clicking on Tools-Options-Language Settings-DeepL

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.