tdf#154677: fix crash when clicking on Tools-Options-Language Settings-DeepL

Change-Id: Iaf24dae303edbeeaf8e19a4ca3d19232083a71bb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150158
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>